@@ -133,7 +133,7 @@ abstract class MTASchema_LIRR extends MTASchema {
             private LIRR.Alert[] getAlerts(final boolean update){
                 if(alerts == null || update){
                     final String id = String.valueOf(route_id);
-                    this.alerts = List.of(cast(mta).getAlerts(
+                    this.alerts = Arrays.asList(cast(mta).getAlerts(
                         cast(mta).service.alerts.getLIRR(),
                         ent -> {
                             final GTFSRealtimeProto.Alert alert;
@@ -330,7 +330,7 @@ abstract class MTASchema_LIRR extends MTASchema {
             private LIRR.Alert[] getAlerts(final boolean update){
                 if(alerts == null || update){
                     final String id = String.valueOf(stop_id);
-                    this.alerts = List.of(cast(mta).getAlerts(
+                    this.alerts = Arrays.asList(cast(mta).getAlerts(
                         cast(mta).service.alerts.getLIRR(),
                         ent -> {
                             final GTFSRealtimeProto.Alert alert;
